--- a/tmm-test.html
+++ b/tmm-test.html
@@ -5,7 +5,7 @@
 <body>
   {{> app}}
   <div class="footer">
-    2012 | GS
+    2012 | fnlly
   </div>
 </body>
 
@@ -21,7 +21,7 @@
   {{loginButtons}}
   <div class="container">
     <p>Welcome to the app!</p>
-    <p>Please sign in to enjoy it.</p>
+    <p>Please sign in or sign up to enjoy it.</p>
   </div>
 </template>
 
