now we display 'you' insteaead of your giant's name where appropriate

--- a/tmm-test.html
+++ b/tmm-test.html
@@ -74,7 +74,13 @@
 </template>
 
 <template name="singleGiantItem">
-    <a href="#" id="{{this.name}}" class="singleGiantLink">{{this.name}}</a>
+    <a href="#" id="{{this.name}}" class="singleGiantLink">
+      {{#if itIsMe}}
+        you
+      {{else}}
+        {{this.name}}
+      {{/if}}
+    </a>
 </template>
 
 <template name="singleGiantPage">
